feat: add PIN attribute to User model and update related functionalities for enhanced security

--- a/app/templates/locallogin.html
+++ b/app/templates/locallogin.html
@@ -11,8 +11,10 @@
   .numpad {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 0.5rem;
+    gap: 10px; /* meno spazio tra i bottoni */
     justify-content: center;
+    margin: 0 auto;
+    max-width: 1px; /* imposta una larghezza fissa centrata */
   }
 
   .login-container {
